# MyCProject

./: CMakeLists.txt
chapter_1/: exercise_1-1.c  exercise_1-10.c  exercise_1-12.c  exercise_1-13.c  exercise_1-14.c  exercise_1-15.c  exercise_1-16.c  exercise_1-17.c  exercise_1-18.c  exercise_1-19.c  exercise_1-2.c  exercise_1-20.c  exercise_1-21.c  exercise_1-22.c  exercise_1-23.c  exercise_1-3.c  exercise_1-4.c  exercise_1-5.c  exercise_1-6.c  exercise_1-7.c  exercise_1-8.c  exercise_1-9.c
chapter_2/: exercise_2-1.c  exercise_2-10.c  exercise_2-2.c  exercise_2-3.c  exercise_2-4.c  exercise_2-5.c  exercise_2-6.c  exercise_2-7.c  exercise_2-8.c  exercise_2-9.c
chapter_3/: exercise_3-1.c  exercise_3-2.c  exercise_3-3.c  exercise_3-4.c  exercise_3-5.c  exercise_3-6.c
chapter_4/: exercise_4-1.c  exercise_4-10.c  exercise_4-11.c  exercise_4-12.c  exercise_4-13.c  exercise_4-14.c  exercise_4-2.c  exercise_4-3.c  exercise_4-4.c  exercise_4-5.c  exercise_4-6.c  exercise_4-7.c  exercise_4-8.c  exercise_4-9.c
chapter_5/: exercise_5-1.c  exercise_5-10.c  exercise_5-11a.c  exercise_5-11b.c  exercise_5-12a.c  exercise_5-13.c  exercise_5-14.c  exercise_5-15.c  exercise_5-16.c  exercise_5-18.c  exercise_5-19.c  exercise_5-2.c  exercise_5-20.c  exercise_5-3.c  exercise_5-4.c  exercise_5-5.c  exercise_5-6.c  exercise_5-7.c  exercise_5-8.c  exercise_5-9.c
chapter_6/: exercise_6-1.c  exercise_6-2.c  exercise_6-3.c  exercise_6-4.c  exercise_6-5.c  exercise_6-6.c
chapter_7/: exercise_7-1.c  exercise_7-2.c  exercise_7-3.c  exercise_7-4.c  exercise_7-5.c  exercise_7-6.c  exercise_7-7.c  exercise_7-9.txt  exercise_7-9_isupper_calculate.c  exercise_7-9_isupper_lookup.c  exercise_7-9_isupper_none.c  exercise_7-9_isupper_stdlib.c
chapter_8/: exercise_8-1.c  exercise_8-2.c  exercise_8-3.c  exercise_8-4.c  exercise_8-5.c  exercise_8-6.c  exercise_8-7.c  exercise_8-8.c
