cmake_minimum_required(VERSION 3.7)
project(MyCProject)

set(CMAKE_C_STANDARD 99)

set(SOURCE_FILES main.c)
add_executable(MyCProject ${SOURCE_FILES})
add_executable(exercise_1-1 chapter_1/exercise_1-1.c)
add_executable(exercise_1-2 chapter_1/exercise_1-2.c)
add_executable(exercise_1-3 chapter_1/exercise_1-3.c)
add_executable(exercise_1-4 chapter_1/exercise_1-4.c)
add_executable(exercise_1-5 chapter_1/exercise_1-5.c)
add_executable(exercise_1-6 chapter_1/exercise_1-6.c)
add_executable(exercise_1-7 chapter_1/exercise_1-7.c)
add_executable(exercise_1-8 chapter_1/exercise_1-8.c)
add_executable(exercise_1-9 chapter_1/exercise_1-9.c)
add_executable(exercise_1-10 chapter_1/exercise_1-10.c)
add_executable(exercise_1-12 chapter_1/exercise_1-12.c)
add_executable(exercise_1-13 chapter_1/exercise_1-13.c)
add_executable(exercise_1-14 chapter_1/exercise_1-14.c)
add_executable(exercise_1-15 chapter_1/exercise_1-15.c)
add_executable(exercise_1-16 chapter_1/exercise_1-16.c)
add_executable(exercise_1-17 chapter_1/exercise_1-17.c)
add_executable(exercise_1-18 chapter_1/exercise_1-18.c)
add_executable(exercise_1-19 chapter_1/exercise_1-19.c)
add_executable(exercise_1-20 chapter_1/exercise_1-20.c)
add_executable(exercise_1-21 chapter_1/exercise_1-21.c)
add_executable(exercise_1-22 chapter_1/exercise_1-22.c)
add_executable(exercise_1-23 chapter_1/exercise_1-23.c)
add_executable(exercise_1-24 chapter_1/exercise_1-24.c)