cmake_minimum_required(VERSION 3.7)
project(MyCProject)

set(CMAKE_C_STANDARD 99)

set(SOURCE_FILES stot.c)
set(SOURCE_FILES chapter_6/getch.c)

add_executable(exercise_1-1 chapter_1/exercise_1-1.c)
add_executable(exercise_1-2 chapter_1/exercise_1-2.c)
add_executable(exercise_1-3 chapter_1/exercise_1-3.c)
add_executable(exercise_1-4 chapter_1/exercise_1-4.c)
add_executable(exercise_1-5 chapter_1/exercise_1-5.c)
add_executable(exercise_1-6 chapter_1/exercise_1-6.c)
add_executable(exercise_1-7 chapter_1/exercise_1-7.c)
add_executable(exercise_1-8 chapter_1/exercise_1-8.c)
add_executable(exercise_1-9 chapter_1/exercise_1-9.c)
add_executable(exercise_1-10 chapter_1/exercise_1-10.c)
add_executable(exercise_1-12 chapter_1/exercise_1-12.c)
add_executable(exercise_1-13 chapter_1/exercise_1-13.c)
add_executable(exercise_1-14 chapter_1/exercise_1-14.c)
add_executable(exercise_1-15 chapter_1/exercise_1-15.c)
add_executable(exercise_1-16 chapter_1/exercise_1-16.c)
add_executable(exercise_1-17 chapter_1/exercise_1-17.c)
add_executable(exercise_1-18 chapter_1/exercise_1-18.c)
add_executable(exercise_1-19 chapter_1/exercise_1-19.c)
add_executable(exercise_1-20 chapter_1/exercise_1-20.c)
add_executable(exercise_1-21 chapter_1/exercise_1-21.c)
add_executable(exercise_1-22 chapter_1/exercise_1-22.c)
add_executable(exercise_1-23 chapter_1/exercise_1-23.c)
add_executable(exercise_2-1 chapter_2/exercise_2-1.c)
add_executable(exercise_2-2 chapter_2/exercise_2-2.c)
add_executable(exercise_2-3 chapter_2/exercise_2-3.c)
add_executable(exercise_2-4 chapter_2/exercise_2-4.c)
add_executable(exercise_2-5 chapter_2/exercise_2-5.c)
add_executable(exercise_2-6 chapter_2/exercise_2-6.c)
add_executable(exercise_2-7 chapter_2/exercise_2-7.c)
add_executable(exercise_2-8 chapter_2/exercise_2-8.c)
add_executable(exercise_2-9 chapter_2/exercise_2-9.c)
add_executable(exercise_2-10 chapter_2/exercise_2-10.c)
add_executable(exercise_3-1 chapter_3/exercise_3-1.c)
add_executable(exercise_3-2 chapter_3/exercise_3-2.c)
add_executable(exercise_3-3 chapter_3/exercise_3-3.c)
add_executable(exercise_3-4 chapter_3/exercise_3-4.c)
add_executable(exercise_3-5 chapter_3/exercise_3-5.c)
add_executable(exercise_3-6 chapter_3/exercise_3-6.c)
add_executable(exercise_4-1 chapter_4/exercise_4-1.c)
add_executable(exercise_4-2 chapter_4/exercise_4-2.c)
add_executable(exercise_4-3 chapter_4/exercise_4-3.c)
add_executable(exercise_4-4 chapter_4/exercise_4-4.c)
add_executable(exercise_4-5 chapter_4/exercise_4-5.c)
add_executable(exercise_4-6 chapter_4/exercise_4-6.c)
add_executable(exercise_4-7 chapter_4/exercise_4-7.c)
add_executable(exercise_4-8 chapter_4/exercise_4-8.c)
add_executable(exercise_4-9 chapter_4/exercise_4-9.c)
add_executable(exercise_4-10 chapter_4/exercise_4-10.c)
add_executable(exercise_4-11 chapter_4/exercise_4-11.c)
add_executable(exercise_4-12 chapter_4/exercise_4-12.c)
add_executable(exercise_4-13 chapter_4/exercise_4-13.c)
add_executable(exercise_4-14 chapter_4/exercise_4-14.c)
target_link_libraries(exercise_4-5 m)
target_link_libraries(exercise_4-6 m)
target_link_libraries(exercise_4-7 m)
target_link_libraries(exercise_4-8 m)
target_link_libraries(exercise_4-9 m)
target_link_libraries(exercise_4-10 m)
target_link_libraries(exercise_4-11 m)
target_link_libraries(exercise_4-12 m)
target_link_libraries(exercise_4-13 m)
target_link_libraries(exercise_4-14 m)
add_executable(exercise_5-1 chapter_5/exercise_5-1.c)
add_executable(exercise_5-2 chapter_5/exercise_5-2.c)
add_executable(exercise_5-3 chapter_5/exercise_5-3.c)
add_executable(exercise_5-4 chapter_5/exercise_5-4.c)
add_executable(exercise_5-5 chapter_5/exercise_5-5.c)
add_executable(exercise_5-6 chapter_5/exercise_5-6.c)
add_executable(exercise_5-7 chapter_5/exercise_5-7.c)
add_executable(exercise_5-8 chapter_5/exercise_5-8.c)
add_executable(exercise_5-9 chapter_5/exercise_5-9.c)
add_executable(exercise_5-10 chapter_5/exercise_5-10.c)
add_executable(exercise_5-11a chapter_5/exercise_5-11a.c)
add_executable(exercise_5-11b chapter_5/exercise_5-11b.c)
add_executable(exercise_5-12a chapter_5/exercise_5-12a.c)
add_executable(exercise_5-12b chapter_5/exercise_5-12b.c)
add_executable(exercise_5-13 chapter_5/exercise_5-13.c)
add_executable(exercise_5-14 chapter_5/exercise_5-14.c)
add_executable(exercise_5-15 chapter_5/exercise_5-15.c)
add_executable(exercise_5-16 chapter_5/exercise_5-16.c)
add_executable(exercise_5-18 chapter_5/exercise_5-18.c)
add_executable(exercise_5-19 chapter_5/exercise_5-19.c)
add_executable(exercise_5-20 chapter_5/exercise_5-20.c)
target_link_libraries(exercise_5-10 m)
add_executable(exercise_6-1 chapter_6/exercise_6-1.c)
add_executable(exercise_6-2 chapter_6/exercise_6-2.c)
add_executable(exercise_6-3 chapter_6/exercise_6-3.c)
add_executable(exercise_6-4 chapter_6/exercise_6-4.c)
add_executable(exercise_6-5 chapter_6/exercise_6-5.c)
add_executable(exercise_6-6 chapter_6/exercise_6-6.c)

add_executable(exercise_7-1 chapter_7/exercise_7-1.c)
add_executable(exercise_7-2 chapter_7/exercise_7-2.c)
add_executable(exercise_7-3 chapter_7/exercise_7-3.c)
target_link_libraries(exercise_7-3 m)

add_executable(exercise_7-4 chapter_7/exercise_7-4.c)
add_executable(exercise_7-5 chapter_7/exercise_7-5.c)
add_executable(exercise_7-6 chapter_7/exercise_7-6.c)
add_executable(exercise_7-7 chapter_7/exercise_7-7.c)
add_executable(exercise_7-9_isupper_calculate chapter_7/exercise_7-9_isupper_calculate.c)
add_executable(exercise_7-9_isupper_lookup chapter_7/exercise_7-9_isupper_lookup.c)
add_executable(exercise_7-9_isupper_none chapter_7/exercise_7-9_isupper_none.c)
add_executable(exercise_7-9_isupper_stdlib chapter_7/exercise_7-9_isupper_stdlib.c)
add_executable(exercise_8-2 chapter_8/exercise_8-2.c)
add_executable(exercise_8-3 chapter_8/exercise_8-3.c)
add_executable(exercise_8-4 chapter_8/exercise_8-4.c)
add_executable(exercise_8-1 chapter_8/exercise_8-1.c)
add_executable(exercise_8-5 chapter_8/exercise_8-5.c)
add_executable(exercise_8-7 chapter_8/exercise_8-7.c)
add_executable(exercise_8-8 chapter_8/exercise_8-8.c)
add_executable(exercise_8-6 chapter_8/exercise_8-6.c)